--- a/frontend/src/components/Splash/Tile1/Tile1.css
+++ b/frontend/src/components/Splash/Tile1/Tile1.css
@@ -9,12 +9,12 @@
     align-items: center;
     position: relative;
     overflow: hidden;
+}
 
-    > * {
-        position: absolute;
-        z-index: 0;
-        background-color: transparent;
-    }
+.tile1-holder > * {
+    position: absolute;
+    z-index: 0;
+    background-color: transparent;
 }
 
 .tile1-text {
@@ -24,27 +24,27 @@
     width: 780px;
     z-index: 10;
     background-color: transparent;
+}
 
-    > h3 {
-        color: white;
-        font-family: 'Archivo Black', sans-serif;
-        font-size: 70px;
-        transform: scaleY(75%);
-        text-align: center;
-        letter-spacing: -2px;
-        background-color: transparent;
-    }
+.tile1-text > h3 {
+    color: white;
+    font-family: 'Archivo Black', sans-serif;
+    font-size: 70px;
+    transform: scaleY(75%);
+    text-align: center;
+    letter-spacing: -2px;
+    background-color: transparent;
+}
 
-    > p {
-        color: white;
-        font-size: 18.5px;
-        font-family: "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-        font-weight: 300;
-        text-align: center;
-        line-height: 2;
-        padding-top: 40px;
-        background-color: transparent;
-    }
+.tile1-text > p {
+    color: white;
+    font-size: 18.5px;
+    font-family: "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 300;
+    text-align: center;
+    line-height: 2;
+    padding-top: 40px;
+    background-color: transparent;
 }
 
 .tile1-shoes {
